objects/redwing__Auto_Assign_Rule__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Applicability__c</fullName>
        <label>Applicability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Existing users only</fullName>
                </value>
                <value>
                    <fullName>New and existing users</fullName>
                </value>
                <value>
                    <fullName>Existing, new and updated users</fullName>
                </value>
                <value>
                    <fullName>Self-registered users</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Auto_Assign_Rule_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auto-Assign Rule Bundle</label>
        <referenceTo>redwing__Auto_Assign_Rule_Bundle__c</referenceTo>
        <relationshipLabel>Auto-Assign Rules</relationshipLabel>
        <relationshipName>Auto_Assign_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Auto-Assign Rule</label>
    <nameField>
        <label>Auto-Assign Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auto-Assign Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>